// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EuiFieldText is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  icon="foo"
  inputid="1"
>
  <eui-validatable-control>
    <input
      aria-label="aria-label"
      class="euiFieldText testClass1 testClass2 emotion-euiTestCss euiFieldText--withIcon"
      data-test-subj="test subject string"
      id="1"
      name="elastic"
      placeholder="Placeholder"
      type="text"
      value="1"
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props controlOnly is rendered 1`] = `
<eui-validatable-control>
  <input
    class="euiFieldText"
    type="text"
    value=""
  />
</eui-validatable-control>
`;

exports[`EuiFieldText props fullWidth is rendered 1`] = `
<eui-form-control-layout
  fullwidth="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldText euiFieldText--fullWidth"
      type="text"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props isInvalid is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  isinvalid="true"
>
  <eui-validatable-control
    isinvalid="true"
  >
    <input
      class="euiFieldText euiFormControlLayout--1icons"
      type="text"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props isLoading is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  isloading="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldText euiFormControlLayout--1icons euiFieldText-isLoading"
      type="text"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;

exports[`EuiFieldText props readOnly is rendered 1`] = `
<eui-form-control-layout
  fullwidth="false"
  readonly="true"
>
  <eui-validatable-control>
    <input
      class="euiFieldText"
      readonly=""
      type="text"
      value=""
    />
  </eui-validatable-control>
</eui-form-control-layout>
`;
